
changes in version 0.02-1 (2018-05-01)
unreleased:
  - this release is under development
changed:
  - vignette: also includes info on readCorpus()
added:
  - kRp.hierarchy: new S4 class to replace kRp.sourcesCorpus and
    kRp.topicCorpus to allow more generic nesting of hierarchical levels
  - readCorpus(): new function to generate kRp.hierarchy objects recursively
  - removed all code regarding simpleCorpus(), sourcesCorpus() and topicCorpus(),
    their object classes and methods; this is all handled much more flexible
    by kRp.hierarchy and readCorpus() now

changes in version 0.01-4 (2018-03-07)
fixed:
  - sourcesCorpus(): speak of "text" instead of "texts" if it's only one
changed:
  - adjusted package to support koRpus >= 0.11 and sylly, especially with
    regards to summary(), hyphen(), and new class contructors
  - summary(): for more coherence with the koRpus package the "text" column
    in the summary slot was renamed into "doc_id"
  - reaktanz.de supports HTTPS now, updated references
  - vignette is now in RMarkdown/HTML format; the SWeave/PDF version was
    dropped
  - hyphen()/lex.div()/readability(): 'quiet' is now TRUE by default
  - lex.div(): 'char' is now an emtpy string by default; computing all
    characteristics was not a useful default for large text corpora
added:
  - README.md
  - new [, [<-, [[ and [[<- methods added for corpus object classes
  - new methods tif_as_tokens_df() to export corpus objects as a single
    data.frame in fully TIF compliant format
  - summary(): now also includes the total number of stopwords (if available)
  - new class object contructors kRp_corpus(), kRp_sourcesCorpus(), and
    kRp_topicCorpus() can be used instead of new("kRp.corpus", ...) etc.

changes in version 0.01-3 (2016-07-12)
fixed:
  - the arguments that simpleCorpus() was supposed to pipe to DirSource()
    weren't used
changed:
  - the "paths" argument of topicCorpus() now expects a list, not a vector