@@ -9,6 +9,7 @@ added:
   - kRp.hierarchy: new S4 class to replace kRp.sourcesCorpus and
     kRp.topicCorpus to allow more generic nesting of hierarchical levels
   - readCorpus(): new function to generate kRp.hierarchy objects recursively
+  - many corpus*() getter functions can now filter by hierarchy level or category ID
   - removed all code regarding simpleCorpus(), sourcesCorpus() and topicCorpus(),
     their object classes and methods; this is all handled much more flexible
     by kRp.hierarchy and readCorpus() now
